css/style.css
body {
    background-color: #e9e9e9;
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
    padding: 0;
}

header {
    background-color: #a11236;  
    font-size: 20px;
    text-align: center;
    padding: 10px 25px;
}
header img{
    margin-top: 4px;
    float: left;
    height: 40px;
    width: auto;
    padding: 0%;
}
header h1 {
    padding: 0;
    margin: 0;
    color: #FFFFFF;
}
.navbar ul{
    list-style-type: none;  
    background-color: grey;
    padding: 0;
    margin: 0;
    overflow: hidden;
}
.navbar li{
    width: calc(100% / 3); /* berekent de breete(handig als je bijvoorbeeld drie list items heb die naast elkaar moetten */
}
.navbar a{
    color: white;
    text-decoration: none;
    padding:15px;
    display: block;
    text-align: center;
    transition: background-color 0.2s ease;
}
.navbar a:hover{
    background-color: rgb(81, 79, 79);
    border-radius: 10px;
}
.navbar li{
    float: left;
}
main img{
    border-radius: 15px;
}

main, article{
    background-color: #f3f3f3;
    width: 70%;
    margin: 25px auto;
    margin-left: auto;
    margin-right: auto;
    border-radius: 20px;
    text-align: center;
    box-shadow: 0px 0px 5px;
    padding: 0px 10px 10px; /* extra 10px voor bottom zodat de bodem padding net zo breet is als aan de zijkanten */
}
main::after {  /* van chatgpt*/
    content: "";
    display: block;
    clear: both;
}
main div {
    float: left;
    margin: 10px;
    width: calc(100% / 3 - 40px);
    height: 380px;
    background-color: #e9e9e9;
    list-style-type: none;
    box-shadow: 0px 0px 5px black;
    border-radius: 15px;
    padding: 10px;
    color: black;
}
main#tutorial div{
    float: left;
    margin: 10px;
    width: calc(100% / 2 - 40px);
    height: 380px;
    background-color: #e9e9e9;
    list-style-type: none;
    box-shadow: 0px 0px 5px black;
    border-radius: 15px;
    padding: 10px;
    color: black;
}
main div a{
    text-decoration: none;
}
h2{
    margin: 10px;
}

main h2 {
    font-size: 36px;
}

hr{
    width: calc(100% - 20px);
}

@media only screen and (max-width: 1200px){
    main {
        width: 90%;
        padding: 10px;
    }
    main div{
        width: calc(100% / 2 - 40px);
    }
}

@media only screen and (max-width: 600px){
    main{
        width: 90%;
        padding: 0px 0px 10px;
    }
    main div, main#tutorial div{
        margin: 10px 7.5% ; /* waar 7.5% weet ik niet */
        width: 80%;
    }
}
/* voor artiekels*/
article pre {
    text-align: left;
    padding: 20px;
    border: 1px solid #000;
    border-radius: 10px;
    overflow: hidden;
}
article p, article pre {
    margin: 0px 75px;
}

